# gesture-bridge

./: .gitignore  README.md  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  start-server.command  깃헙 공동협업가이드.md
app/: layout.tsx  page.tsx
app/interactive/: page.tsx
app/pc-control/: page.tsx
app/sign-text/: page.tsx
components/: custom-cursor.tsx  magnetic-button.tsx
components/home/: AnimatedHomeBackdrop.tsx  HomeBackdropFallback.tsx
components/interactive/: AnimatedStageBackdrop.tsx  CosmicParticlePlayground.tsx  EffectPanel.tsx  GamePanel.tsx  ImageModePanel.tsx  InteractiveExperience.tsx  SatoruTechniquePanel.tsx  StageBackdropFallback.tsx  (+1 more)
configs/: korean_sentence_gloss_labels.example.json  korean_sentence_gloss_labels.expanded.json  korean_sign_labels.example.json
docs/: operation-guide-ko.md  sign_sentence_research.md
hooks/: use-mobile.ts
models/: sign_knn.joblib
signlanguageProject/: README.md  pyproject.toml
signlanguageProject/configs/: gesture_actions.example.json  korean_sign_labels.example.json  sign_labels.example.json
signlanguageProject/src/gesture_bridge/: cli.py
signlanguageProject/src/gesture_bridge/control/: __init__.py  gestures.py
signlanguageProject/src/gesture_bridge/core/: __init__.py  camera.py  features.py  holistic.py  io.py  landmarks.py  overlay.py  paths.py  stability.py
signlanguageProject/src/gesture_bridge/modes/: pc_control.py
signlanguageProject/src/gesture_bridge/sign/: __init__.py  classifier.py  dataset.py
tests/: test_sentence_translation.py
(+193 files in other folders)
