[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gesture-bridge"
version = "0.1.0"
description = "Shared hand-gesture project for sign-to-text and PC control."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26,<3",
]

[project.optional-dependencies]
vision = [
  "mediapipe>=0.10.14,<0.11",
  "numpy>=1.26,<3",
  "opencv-python>=4.10,<5",
  "Pillow>=10,<13",
]
control = [
  "pyautogui>=0.9.54,<1",
]
ml = [
  "joblib>=1.4,<2",
  "scikit-learn>=1.5,<2",
]
dev = [
  "pytest>=8,<9",
  "ruff>=0.5,<1",
]

[project.scripts]
gesture-bridge = "gesture_bridge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
